--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button{
 }
 label{
   font-size: xx-large;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .form-div{
   display: flex;
@@ -58,4 +58,7 @@ label{
 }
 .number{
   margin: 15px;
+}
+.number-input{
+  margin-top: 60px;
 }
